/*
Copyright 2024 Nokia.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto2";

package github.com.kform_dev.choreo.apis.selector.v1alpha1;

// Package-wide variables from generator "generated".
option go_package = "github.com/kform-dev/choreo/apis/selector/v1alpha1";

// A expression selector is a query over a set of resources. The result of matchLabels and
// matchExpressions are ANDed.
// An empty selector matches all objects. A null selector matches no objects.
// +structType=atomic
message ExpressionSelector {
  // match is a map of {expression,value} pairs. A single {expression,value} in the match
  // map is equivalent to an element of matchExpressions, whose expression field is "expression", the
  // operator is "In", and the values array contains only "value". The requirements are ANDed.
  // +optional
  map<string, string> match = 1;

  // matchExpressions is a list of field selector requirements. The requirements are ANDed.
  // +optional
  repeated ExpressionSelectorRequirement matchExpressions = 2;
}

// A expression selector requirement is a selector that contains values, an expression, and an operator that
// relates the expression and values.
message ExpressionSelectorRequirement {
  // expression is a cel expression
  // +patchMergeKey=expression
  // +patchStrategy=merge
  optional string expression = 1;

  // operator represents a expression's relationship to a set of values.
  optional string operator = 2;

  // values is an array of string values. If the operator is In or NotIn,
  // the values array must be non-empty. If the operator is Exists or DoesNotExist,
  // the values array must be empty.
  // +optional
  repeated string values = 3;
}

